--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.GenreActivity" />
-        <activity android:name=".activity.GenreDetailActivity"></activity>
+        <activity android:name=".activity.GenreDetailActivity" />
+        <activity
+            android:name=".activity.Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
