--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.DetailMovie"
+            android:label="@string/title_activity_detail_movie"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
