--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,12 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    //carousel view
-    compile 'com.synnapps:carouselview:0.1.4'
+
     //carousel add
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
+    //circle image view
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 
 }
